--- a/simple_cms/config/database.yml
+++ b/simple_cms/config/database.yml
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: simple_cms_production
-  username: simple_cms
-  password: <%= ENV['SIMPLE_CMS_DATABASE_PASSWORD'] %>
+  database: simple_cms_development
+  username: root
+  password:
